# pinnotes

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-22-pinned-sticky-notes.md
docs/superpowers/specs/: 2026-07-22-pinned-sticky-notes-design.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  db.rs  geometry.rs  lib.rs  main.rs  snooze.rs  state.rs  tray.rs  window_manager.rs
src/lib/: completedView.svelte  completedView.test.ts  noteView.svelte  noteView.test.ts  settingsView.svelte  settingsView.test.ts  tauri.ts  theme.css
