[package]
name = "pinnotes"
version = "0.1.0"
description = "PinNotes — always-on-top sticky-note reminders"
authors = ["buhiyo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# unique and wouldn't conflict with the bin name. This seems to be only an issue
# on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pinnotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
